# pepperbyte_robot

./: .gitignore  README.md  frames_2026-03-24_14.04.23.gv
.claude/: settings.json
ai-references/: PepperByte_Development_Plan.docx  PepperByte_Development_Plan.md  codebase_analysis.md
scripts/: deploy.sh  fix_python.sh  nuke_ros.sh  setup_resume.sh  setup_ros2_humble.sh  test_serial.sh
src/cobra_driver/: CMakeLists.txt  package.xml
src/cobra_driver/config/: 99-cobra-flex.rules  cobra_driver_params.yaml
src/cobra_driver/include/cobra_driver/: serial_port.hpp
src/cobra_driver/launch/: cobra_driver.launch.py
src/cobra_driver/src/: cobra_driver_node.cpp  serial_port.cpp
src/pepperbyte_bringup/: CMakeLists.txt  package.xml
src/pepperbyte_bringup/config/: teleop_twist_joy_params.yaml  twist_mux.yaml
src/pepperbyte_bringup/launch/: gazebo_nav.launch.py  gazebo_slam.launch.py  gazebo_teleop.launch.py  mapping_nav.launch.py  mapping_teleop.launch.py  teleop_only.launch.py
src/pepperbyte_bringup/rviz/: mapping.rviz  nav.rviz  slam.rviz
src/pepperbyte_bringup/scripts/: map_cleaner.py
src/pepperbyte_description/: CMakeLists.txt  package.xml
src/pepperbyte_description/launch/: description.launch.py
src/pepperbyte_description/urdf/: camera.xacro  chassis.xacro  gazebo.xacro  imu.xacro  lidar.xacro  pepperbyte.urdf.xacro  wheels.xacro
src/pepperbyte_description/worlds/: commercial_building.sdf  simple_room.sdf
src/pepperbyte_navigation/: CMakeLists.txt  package.xml
src/pepperbyte_navigation/config/: nav2_params.yaml
src/pepperbyte_navigation/launch/: navigation.launch.py
src/pepperbyte_slam/: CMakeLists.txt  package.xml
src/pepperbyte_slam/config/: robot_localization_ekf.yaml  slam_toolbox_online_async.yaml
src/pepperbyte_slam/launch/: slam.launch.py
